--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bootstrap": "^4.0.0-beta.2",
+    "chart": "^0.1.2",
+    "chartjs": "^0.3.24",
     "core-js": "^2.4.1",
+    "datatables": "^1.10.13",
+    "datatables-bootstrap": "0.0.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery.easing": "^1.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -29,6 +37,7 @@
     "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
+    "@types/chart.js": "^2.7.6",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
