--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-beta.2",
-    "chart": "^0.1.2",
-    "chartjs": "^0.3.24",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "datatables": "^1.10.13",
     "datatables-bootstrap": "0.0.1",
